[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cronet"
version = "0.1.2"
authors = [
  { name="Lucas Moauro" },
]
description = "Python wrapper for Chromium's http library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["multidict"]

[project.optional-dependencies]
test = ["pytest", "aiohttp", "pytest-asyncio"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/lagenar/python-cronet"
Issues = "https://github.com/lagenar/python-cronet/issues"
